[gd_scene load_steps=18 format=3 uid="uid://cd83ow7166hs3"]

[ext_resource type="Script" uid="uid://d4fu5nvhhe5u" path="res://barkley2/scenes/_utilityStation/brain_breed_gun_data.gd" id="1_g16qj"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="2_ihow8"]
[ext_resource type="FontFile" uid="uid://bkx4jb55yvtqy" path="res://barkley2/resources/fonts/fn_12ocs.tres" id="3_v3n8g"]
[ext_resource type="Script" uid="uid://c33j1ok2mwock" path="res://barkley2/resources/B2_Weapon/lineage_underline_label.gd" id="4_ffgwv"]
[ext_resource type="Texture2D" uid="uid://co7bnjgmckp8e" path="res://barkley2/assets/b2_original/guns/FrankieGuns.png" id="5_cmjny"]
[ext_resource type="FontFile" uid="uid://drr75gc00ws56" path="res://barkley2/resources/fonts/fn1b.tres" id="6_llg8p"]
[ext_resource type="FontFile" uid="uid://dre1af5ictbg8" path="res://barkley2/resources/fonts/fn_7ocs.tres" id="7_liqaw"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="8_qyvd6"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="9_tc8cl"]

[sub_resource type="LabelSettings" id="LabelSettings_82xl0"]
line_spacing = 0.0
font = ExtResource("2_ihow8")

[sub_resource type="LabelSettings" id="LabelSettings_ry6vp"]
font = ExtResource("3_v3n8g")

[sub_resource type="AtlasTexture" id="AtlasTexture_82xl0"]
atlas = ExtResource("5_cmjny")
region = Rect2(0, 0, 49, 24)

[sub_resource type="LabelSettings" id="LabelSettings_4wrkx"]
font = ExtResource("6_llg8p")

[sub_resource type="LabelSettings" id="LabelSettings_2ih6y"]
font = ExtResource("7_liqaw")

[sub_resource type="LabelSettings" id="LabelSettings_icflc"]
font = ExtResource("6_llg8p")

[sub_resource type="LabelSettings" id="LabelSettings_efojs"]
font = ExtResource("8_qyvd6")

[sub_resource type="LabelSettings" id="LabelSettings_muhsy"]
font = ExtResource("9_tc8cl")

[node name="brain_breed_gun_data" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g16qj")

[node name="gun_name_container" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 204.0
offset_bottom = 17.0
grow_horizontal = 2
alignment = 1

[node name="prefix_1" type="Label" parent="gun_name_container"]
layout_mode = 2
text = "Prefix 1"
label_settings = SubResource("LabelSettings_82xl0")

[node name="prefix_2" type="Label" parent="gun_name_container"]
layout_mode = 2
text = "Prefix 2"
label_settings = SubResource("LabelSettings_82xl0")

[node name="gun_name" type="Label" parent="gun_name_container"]
layout_mode = 2
text = "Pistol"
label_settings = SubResource("LabelSettings_ry6vp")
script = ExtResource("4_ffgwv")

[node name="suffix" type="Label" parent="gun_name_container"]
layout_mode = 2
text = "with
Bla Bla"
label_settings = SubResource("LabelSettings_82xl0")

[node name="gun_data_container" type="Control" parent="."]
anchors_preset = 0
offset_top = 18.0
offset_right = 204.0
offset_bottom = 68.0
size_flags_vertical = 3

[node name="gun_texture" type="TextureRect" parent="gun_data_container"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 103.0
offset_bottom = 51.0
size_flags_horizontal = 4
texture = SubResource("AtlasTexture_82xl0")
expand_mode = 2
stretch_mode = 4

[node name="points_cont" type="HBoxContainer" parent="gun_data_container"]
modulate = Color(1, 1, 1, 0.75000006)
layout_mode = 0
offset_left = 2.0
offset_top = 32.0
offset_right = 42.0
offset_bottom = 50.0

[node name="gun_point_lbl" type="Label" parent="gun_data_container/points_cont"]
layout_mode = 2
size_flags_vertical = 1
text = "60"
label_settings = SubResource("LabelSettings_4wrkx")
vertical_alignment = 2

[node name="gun_point_title" type="Label" parent="gun_data_container/points_cont"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 6
text = "Points"
label_settings = SubResource("LabelSettings_2ih6y")
vertical_alignment = 2

[node name="gun_weight" type="Label" parent="gun_data_container"]
modulate = Color(1, 1, 1, 0.75000006)
layout_mode = 0
offset_left = 51.0
offset_top = 32.0
offset_right = 91.0
offset_bottom = 50.0
text = "69รง"
label_settings = SubResource("LabelSettings_icflc")
horizontal_alignment = 2

[node name="gun_dmg" type="VBoxContainer" parent="gun_data_container"]
layout_mode = 0
offset_left = 107.0
offset_top = 5.0
offset_right = 133.0
offset_bottom = 29.0
theme_override_constants/separation = -3

[node name="dmg_title" type="Label" parent="gun_data_container/gun_dmg"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "DMG"
label_settings = SubResource("LabelSettings_efojs")
vertical_alignment = 1

[node name="dmg_value" type="Label" parent="gun_data_container/gun_dmg"]
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_muhsy")
vertical_alignment = 1

[node name="gun_rte" type="VBoxContainer" parent="gun_data_container"]
layout_mode = 0
offset_left = 148.0
offset_top = 5.0
offset_right = 217.0
offset_bottom = 29.0
theme_override_constants/separation = -3
alignment = 1

[node name="rte_title" type="Label" parent="gun_data_container/gun_rte"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "RATE"
label_settings = SubResource("LabelSettings_efojs")
vertical_alignment = 1

[node name="rte_value" type="Label" parent="gun_data_container/gun_rte"]
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_muhsy")
vertical_alignment = 1

[node name="gun_cap" type="VBoxContainer" parent="gun_data_container"]
layout_mode = 0
offset_left = 107.0
offset_top = 29.0
offset_right = 143.0
offset_bottom = 53.0
theme_override_constants/separation = -3

[node name="cap_title" type="Label" parent="gun_data_container/gun_cap"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "CAPACITY"
label_settings = SubResource("LabelSettings_efojs")
vertical_alignment = 1

[node name="cap_value" type="Label" parent="gun_data_container/gun_cap"]
layout_mode = 2
text = "69"
label_settings = SubResource("LabelSettings_muhsy")
vertical_alignment = 1

[node name="gun_spc" type="VBoxContainer" parent="gun_data_container"]
layout_mode = 0
offset_left = 148.0
offset_top = 29.0
offset_right = 172.0
offset_bottom = 53.0
theme_override_constants/separation = -3

[node name="spc_title" type="Label" parent="gun_data_container/gun_spc"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "SPC"
label_settings = SubResource("LabelSettings_efojs")
vertical_alignment = 1

[node name="spc_value" type="Label" parent="gun_data_container/gun_spc"]
layout_mode = 2
text = "9"
label_settings = SubResource("LabelSettings_muhsy")
vertical_alignment = 1

[node name="gun_gen" type="VBoxContainer" parent="gun_data_container"]
layout_mode = 0
offset_left = 175.0
offset_top = 29.0
offset_right = 199.0
offset_bottom = 53.0
theme_override_constants/separation = -3

[node name="gen_title" type="Label" parent="gun_data_container/gun_gen"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
text = "GEN"
label_settings = SubResource("LabelSettings_efojs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="gen_value" type="Label" parent="gun_data_container/gun_gen"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_muhsy")
horizontal_alignment = 1
vertical_alignment = 1
